--- a/swagger.html
+++ b/swagger.html
@@ -127,7 +127,7 @@
   <script>
     window.onload = function () {
       SwaggerUIBundle({
-        url: "https://raw.githubusercontent.com/Asdgyu19/Cloud_Computing_Kick_Off_Project/main/openapi.yaml",
+        url: "openapi.yaml",
         dom_id: "#swagger-ui",
         deepLinking: true,
         presets: [
